AMP-197 Updated datatype for EventType (Part-2) (#157)
* AMP-197 Updated datatype for EventType (Part-2)